--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,5 @@
 @import './helpers/reset.scss';
 @import './helpers/vars.scss';
-
-h1 {
-  color: $c-foreground;
-}
+@import './generic/fonts.scss';
+@import './generic/typography.scss';
+@import './generic/animations.scss';
