add RWD & smooth shadow mixin, classes to anchors in menu

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import './helpers/reset.scss';
 @import './helpers/vars.scss';
+@import './helpers/mixins.scss';
 @import './generic/fonts.scss';
 @import './generic/typography.scss';
 @import './generic/animations.scss';
