--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -1,6 +1,7 @@
 @import '../partials/landing/hero-section';
 @import '../partials/landing/hero-sub';
 @import '../partials/landing/services-section';
+@import '../partials/landing/team-section';
 
 .landing {
   &__section {
