--- a/src/scss/partials/landing/_hero-section.scss
+++ b/src/scss/partials/landing/_hero-section.scss
@@ -2,25 +2,20 @@
   color: #fff;
 
   &__heading {
+    padding: 140px 0 50px;
     font-size: 101px;
     font-family: $font-family-serif;
     line-height: 80px;
   }
 
   &__paragraph {
-    font-size: 22px;
     width: 720px;
+    padding: 0 0 40px;
+    font-size: 22px;
+    line-height: 36px;
   }
 
   &__button {
-    border: 1px solid $color-highlight;
     padding: 20px 15px;
-    @include flex(row, space-between, center) {
-      display: inline-flex;
-    }
-
-    &::after {
-      content: '->';
-    }
   }
 }
