--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,11 +1,12 @@
 .main-header {
   position: fixed;
+  z-index: 10;
   top: 0;
   right: 0;
   left: 0;
-  @include flex(row, center, center);
   width: 100%;
   height: 132px;
+  @include flex(row, center, center);
   background-color: #fff;
 
   &__wrapper {
@@ -23,7 +24,7 @@
       &--contact {
         margin-left: 15px;
 
-        .main-header__navigation-link {
+        a {
           padding: 23px 30px;
           color: $color-highlight;
           border: 1px solid $color-highlight;
@@ -38,11 +39,18 @@
       }
 
       &.lang-item {
+        width: 20px;
+        height: 20px;
         border: 1px solid $color-lighter;
         font-size: $font-size-xs;
+        color: $color-lighter;
+        
+        @include flex(row, center, center) {
+          display: inline-flex;
+        }
 
-        .main-header__navigation-link {
-          padding: 2px;
+        a {
+          display: block;
         }
       }
 
@@ -51,7 +59,7 @@
       }
     }
 
-    &-link {
+    a {
       display: block;
       padding: 16px;
     }
