--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -6,8 +6,9 @@
   left: 0;
   width: 100%;
   height: 132px;
-  @include flex(row, center, center);
   background-color: #fff;
+  @include flex(row, center, center);
+  @include shadow(0, 3px, $color-shadow);
 
   &__wrapper {
     @include flex(row, space-between, center);
@@ -15,14 +16,44 @@
 
   &__navigation {
     &-item {
+      // position: relative;
       display: inline-block;
       font-weight: 700;
       font-size: $font-size-mid;
       text-decoration: none;
+      padding: 16px;
       text-transform: uppercase;
+
+
+
+    a {
+      position: relative;
+      display: block;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        transform: scale(0, 1);
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: $color-highlight;
+        transform-origin: bottom right;
+        transition: transform $tr;
+      }
+
+      &:hover {
+        &::after {
+          transform-origin: bottom left;
+          transform: scale(1);
+        }
+      }
+    }
 
       &--contact {
         margin-left: 15px;
+        padding: 0;
 
         a {
           padding: 23px 30px;
@@ -31,9 +62,27 @@
           display: inline-flex;
           align-items: center;
           justify-content: center;
+          transition: color $tr, background-color $tr, border-color $tr;
         
           &::after {
             content: '->';
+            transform: unset;
+            position: unset;
+            height: unset;
+            width: unset;
+            background-color: unset;
+            transform-origin: unset;
+            transition: unset;
+          }
+
+          &:hover {
+            color: #fff;
+            border-color: #fff;
+            background-color: $color-highlight;
+            
+            &::after {
+              content: '->';
+            }
           }
         }
       }
@@ -44,13 +93,24 @@
         border: 1px solid $color-lighter;
         font-size: $font-size-xs;
         color: $color-lighter;
+        padding: 0;
+        transition: color $tr, border-color $tr;
         
         @include flex(row, center, center) {
           display: inline-flex;
         }
 
+        &:hover {
+          border-color: $color-highlight;
+          color: $color-highlight;
+        }
+
         a {
           display: block;
+
+          &::after {
+            content: unset;
+          }
         }
       }
 
@@ -58,10 +118,9 @@
         color: $color-highlight;
       }
     }
+  }
 
-    a {
-      display: block;
-      padding: 16px;
-    }
+  &__logo, &__url {
+    display: block;
   }
 }
