--- a/src/scss/partials/footer/_footer.scss
+++ b/src/scss/partials/footer/_footer.scss
@@ -1,12 +1,17 @@
 @import './contact-form';
 
 .main-footer {
-  background-image: radial-gradient(ellipse at 50% 25%, $color-gradient-end, $color-gradient-start);
+  background-image: radial-gradient(
+    ellipse at 50% 25%,
+    rgba($color-gradient-end, 0.93),
+    rgba($color-gradient-start, 0.93)
+  );
+
   &--landing {
     background-image: radial-gradient(
       ellipse at 50% 25%,
-      rgba($color-gradient-end, 0.93),
-      rgba($color-gradient-start, 0.93)
+      darken($color-gradient-end, 7%),
+      darken($color-gradient-start, 7%)
     );
   }
 
@@ -51,14 +56,15 @@
     position: relative;
     z-index: 2;
     width: 100%;
+    height: 216px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
-    padding: 76px 85px 60px 52px;
+    padding: 0 85px 0 52px;
     border-bottom: 2px solid $color-highlight;
     margin: 0 0 -113px;
-    @include shadow(0, 40px, $color-shadow);
+    @include shadow(0, 40px, lighten($color-shadow, 25%));
   }
 
   &__logo {
