--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -10,6 +10,19 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
+  backdrop-filter: none;
+  transition: color $tr, background-color $tr, border-color $tr, backdrop-filter $tr;
+
+  &:hover {
+    color: #fff;
+    background-color: $color-mid;
+    border-color: $color-highlight;
+
+    @supports(backdrop-filter: blur(5px)) {
+      background-color: rgba(#fff, 0.25);
+      backdrop-filter: blur(5px);
+    }
+  }
 
   &::after {
     content: '->';
@@ -22,6 +35,14 @@
 
     &-highlight {
       color: $color-highlight;
+    }
+  }
+
+  &--back {
+    &-light {
+      &:hover {
+        color: $color-mid;
+      }
     }
   }
 }
