styling for team landing site & initial styling for team members

--- a/src/scss/partials/footer/_footer.scss
+++ b/src/scss/partials/footer/_footer.scss
@@ -94,6 +94,13 @@
     &-content {
       color: $color-lighter;
       font-size: $font-size-mid;
+
+      a {
+        transition: color $tr;
+        &:hover {
+          color: $color-highlight;
+        }
+      }
     }
   }
 
