--- a/src/scss/pages/_team.scss
+++ b/src/scss/pages/_team.scss
@@ -1,6 +1,8 @@
 @import '../partials/team/team-members';
 
 .page-team {
+  background-size: cover;
+  
   &__container {
     @include flex(column, flex-start, center);
   }
@@ -13,9 +15,7 @@
   }
 
   &__line {
-    width: 105px;
     margin: 22px 0 30px;
-    background-color: $color-highlight;
   }
 
   &__description {
@@ -25,6 +25,5 @@
   }
   
   &__members {
-
   }
 }
