--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -8,7 +8,7 @@
   height: 132px;
   background-color: #fff;
   @include flex(row, center, center);
-  @include shadow(0, 3px, $color-shadow);
+  // @include shadow(0, 3px, $color-shadow);
 
   &__wrapper {
     @include flex(row, space-between, center);
@@ -79,7 +79,7 @@
             color: #fff;
             border-color: #fff;
             background-color: $color-highlight;
-            
+
             &::after {
               content: '->';
             }
