--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -14,14 +14,9 @@
   transition: color $tr, background-color $tr, border-color $tr, backdrop-filter $tr;
 
   &:hover {
-    color: #fff;
-    background-color: $color-mid;
+    color: $color-highlight;
+    background-color: #fff;
     border-color: $color-highlight;
-
-    @supports(backdrop-filter: blur(5px)) {
-      background-color: rgba(#fff, 0.25);
-      backdrop-filter: blur(5px);
-    }
   }
 
   &::after {
