--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import './pages/landing';
 @import './pages/team';
 @import './pages/team-member';
+@import './pages/specializations';
 
 @import './partials/footer/footer';
 
