--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -1,4 +1,5 @@
 .button {
+  position: relative;
   color: $color-mid;
   background-color: transparent;
   padding: 22px 60px;
@@ -17,10 +18,6 @@
     color: $color-highlight;
     background-color: #fff;
     border-color: $color-highlight;
-  }
-
-  &::after {
-    content: '->';
   }
 
   &--front {
