more work on styling, mostly SVGs

--- a/src/scss/helpers/vars.scss
+++ b/src/scss/helpers/vars.scss
@@ -13,6 +13,7 @@ $color-footer: #2f3537;
 $color-copyright: #98a0a8;
 $color-gray-c7: #c7c7c7;
 $color-services-border: #d5d7d7;
+$color-hero-arrow: #a3a4a5;
 
 // fonts
 
