--- a/src/scss/pages/_specializations.scss
+++ b/src/scss/pages/_specializations.scss
@@ -9,9 +9,6 @@
 
   &__brow {
     margin: 50px 0 27px;
-    color: $color-highlight;
-    font-weight: 700;
-    text-transform: uppercase;
   }
 
   &__heading {
@@ -69,10 +66,12 @@
       &::after {
         opacity: 1;
       }
-    }
 
-    &:nth-child(n+4) {
-      margin: 30px 0 0;
+      .icon {
+        &--arrow {
+          fill: currentColor;
+        }
+      }
     }
 
     @include shadow(10px, 20px, lighten($color-shadow, 50%));
@@ -84,6 +83,17 @@
       z-index: 3;
 
       @include flex(row, flex-start, center);
+
+      & .icon {
+        &--arrow {
+          position: absolute;
+          top: 50%;
+          right: 16px;
+          transform: translateY(-50%);
+          fill: $color-highlight;
+          transition: fill $tr;
+        }
+      }
     }
 
     &-name {
@@ -96,10 +106,18 @@
 
     &--business {
       width: 30%;
+
+      &:nth-child(n+4) {
+        margin: 30px 0 0;
+      }
     }
 
     &--person {
-      width: 23%;
+      width: 48%;
+
+      &:nth-child(n+3) {
+        margin: 30px 0 0;
+      }
     }
   }
 }
