--- a/src/scss/partials/landing/_hero-sub.scss
+++ b/src/scss/partials/landing/_hero-sub.scss
@@ -1,12 +1,10 @@
 .hero-sub {
+  $this: &!default;
   margin: 240px 0 0;
   background-image: radial-gradient(rgba($color-gradient-start, 0.6), rgba($color-gradient-end, 0.6));
 
   &__brow {
     padding: 90px 0 25px;
-    color: $color-highlight;
-    text-transform: uppercase;
-    font-weight: 700;
     font-size: $font-size-base;
   }
 
@@ -40,7 +38,6 @@
     }
 
     &-figure {
-      background-color: $color-light;
       width: 80px;
       height: 80px;
       margin: 0 0 25px;
@@ -51,6 +48,7 @@
       max-width: 100%;
       height: 100%;
       max-height: 100%;
+      fill: currentColor;
     }
 
     &-name {
