--- a/src/scss/partials/landing/_services-section.scss
+++ b/src/scss/partials/landing/_services-section.scss
@@ -1,4 +1,5 @@
 .services-section {
+  $this: &!default;
   padding: 163px 0 0;
   text-align: center;
   
@@ -10,9 +11,6 @@
 
   &__brow {
     padding: 120px 0 27px;
-    color: $color-highlight;
-    text-transform: uppercase;
-    font-weight: 700;
   }
 
   &__heading {
@@ -50,27 +48,48 @@
       font-size: 28px;
       margin: 0 0 -56px;
       z-index: 1;
-      transition: background-color $tr, color $tr;
+      transition: color $tr;
 
       @include shadow(5px, 15px, lighten($color-shadow, 50%));
 
       &::after {
-        content: '->';
+        content: '';
         position: absolute;
-        top: 50%;
-        right: 15px;
-        transform: translateY(-50%);
-        color: $color-highlight;
-        z-index: 2;
-        transition: color $tr;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: radial-gradient(circle at top right, #b26493, $color-highlight);
+        opacity: 0;
+        transition: opacity $tr;
+        z-index: 1;
+      }
+
+      & .icon{
+        &--arrow {
+          position: absolute;
+          top: 50%;
+          right: 56px;
+          transform: translateY(-50%);
+          fill: $color-highlight;
+          transition: fill $tr;
+          z-index: 2;
+        }
       }
 
       &:hover {
-        background-color: $color-highlight;
         color: #fff;
 
         &::after {
-          color: #fff;
+          opacity: 1;
+        }
+
+        .icon {
+          &--arrow {
+            fill: #fff;
+          }
         }
       }
     }
@@ -80,8 +99,10 @@
       display: block;
       width: 100%;
       height: 100%;
+      padding: 0 56px;
       line-height: 111px;
-      z-index: 3;
+      z-index: 2;
+      text-align: left;
     }
   }
 }
