--- a/src/scss/helpers/mixins.scss
+++ b/src/scss/helpers/mixins.scss
@@ -8,9 +8,10 @@
 
 @mixin rwd($query, $mobileFirst: false) {
  $queries: (
-   'xs'     : (max-width: 600px),
-   's'      : (max-width: 900px),
-   'm'      : (max-width: 1200px),
+   'xxs'    : (max-width: 600px),
+   'xs'     : (max-width: 900px),
+   's'      : (max-width: 1200px),
+   'm'      : (max-width: 1400px),
    'l'      : (max-width: 1600px),
    'xl'     : (max-width: 1800px),
    'ultra'  : (max-width: 2500px),
@@ -19,9 +20,10 @@
  );
 
   $queries-mf: (
-    'xs'      : (min-width: 601px),
-    's'       : (min-width: 901px),
-    'm'       : (min-width: 1201px),
+    'xxs'     : (min-width: 601px),
+    'xs'      : (min-width: 901px),
+    's'       : (min-width: 1201px),
+    'm'       : (min-width: 1401px),
     'l'       : (min-width: 1601px),
     'xl'      : (min-width: 1801px),
     'ultra'   : (min-width: 2501px),
