--- a/src/scss/pages/_specializations.scss
+++ b/src/scss/pages/_specializations.scss
@@ -31,12 +31,6 @@
     width: 100%;
 
     @include flex(row, space-between, flex-start, wrap);
-
-    &--business {
-    }
-
-    &--person {
-    }
   }
 
   &__single {
@@ -97,6 +91,7 @@
     }
 
     &-name {
+      width: 100%;
       font-size: 28px;
       font-family: $font-family-serif;
       line-height: 1;
@@ -117,6 +112,49 @@
 
       &:nth-child(n+3) {
         margin: 30px 0 0;
+      }
+    }
+  }
+
+  @include rwd(m) {
+    &__brow {
+      margin: 33px 0 18px;
+    }
+
+    &__heading {
+      font-size: $font-size-heading * 2/3;
+    }
+
+    &__line {
+      width: 81px;
+      margin: 15px 0 20px
+    }
+
+    &__description {
+      width: 55%;
+      padding: unset;
+    }
+
+    &__grid {
+      padding: 33px 0 82px;
+    }
+
+    &__single {
+      height: 74px;
+
+      &-name {
+        font-size: 19px;
+      }
+    }
+  }
+
+  @include rwd(xs) {
+    &__single {
+      height: 100px;
+
+      &-name {
+        font-size: $font-size-mid;
+        padding: 25px 35px 25px 25px;
       }
     }
   }
