--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -49,7 +49,7 @@
 
       &--contact {
         position: relative;
-        margin-left: 15px;
+        margin: 0 0 0 15px;
         padding: 0;
         border: 1px solid $color-highlight;
         color: $color-highlight;
@@ -136,4 +136,50 @@
     height: 100%;
   }
   
+  @include rwd(m) {
+    height: 88px;
+
+    &__navigation {
+      &-inner {
+        @include flex(row, space-around, center);
+      }
+      &-item {
+        padding: 12px;
+
+        &--contact {
+          margin: 0 0 0 10px;
+          padding: 0;
+
+          a {
+            width: 120px;
+            padding: 25px 15px;
+          }
+
+          & .icon {
+            &--arrow {
+              right: 10px;
+            }
+          }
+        }
+
+        &.lang-item {
+          width: 14px;
+          height: 14px;
+          margin: 0 5px;
+          font-size: $font-size-xs * 2/3;
+        }
+      }
+    }
+
+    &__logo {
+      width: 260px;
+      height: 67px;
+    }
+
+    &__navigation {
+      &-item {
+        font-size: 12px;
+      }
+    }
+  }
 }
