--- a/src/scss/partials/footer/_contact-form.scss
+++ b/src/scss/partials/footer/_contact-form.scss
@@ -51,7 +51,8 @@
   &__placeholder {
     position: absolute;
     top: 50%;
-    padding-left: 15px;
+    // padding-left: 15px;
+    padding: 0 0 0 15px;
     transform: translateY(-50%);
     z-index: 1;
     font-size: $font-size-s;
