--- a/src/scss/partials/team/_team-members.scss
+++ b/src/scss/partials/team/_team-members.scss
@@ -18,6 +18,7 @@
       @include flex(row, flex-start, flex-start, wrap) {
         display: inline-flex;
       }
+
       padding: 30px 0 0;
       border-top: 2px solid $color-highlight;
     }
@@ -31,6 +32,7 @@
     width: 383px;
     height: 383px;
     margin-left: 40.5px;
+    background-size: cover;
     z-index: 1;
     transition: transform $tr, box-shadow $tr;
 
@@ -106,6 +108,68 @@
       font-size: $font-size-s;
       color: $color-lighter;
       transition: color $tr;
+    }
+  }
+  
+  @include rwd(m) {
+    margin: 0 0 76px;
+
+    &__group {
+      &-name {
+        font-size: 23px;
+        margin: 0 0 8px;
+      }
+
+      &-wrapper {
+        padding: 20px 0 0;
+      }
+
+      & + & {
+        margin: 110px 0 0;
+      }
+    }
+
+    &__member {
+      width: 350px;
+      height: 350px;
+
+      &:nth-child(n + 4) {
+        margin: 52px 0 0;
+      }
+
+      &-data {
+        width: 90%;
+        height: 61px;
+        margin: 0 0 -27px;
+      }
+
+      &-name {
+        font-size: 19px;
+      }
+    }
+  }
+
+  @include rwd(s) {
+    &__member {
+      width: 250px;
+      height: 250px;
+    }
+  }
+
+  @include rwd(xs) {
+    &__member {
+      width: 200px;
+      height: 200px;
+      margin-left: 20px;
+
+      &-name {
+        font-size: $font-size-mid;
+        text-align: center;
+      }
+
+      &-link {
+        padding: 5px;
+      }
     }
   }
 }
