--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -14,6 +14,11 @@
   backdrop-filter: none;
   transition: color $tr, background-color $tr, border-color $tr, backdrop-filter $tr;
 
+  @include rwd(m) {
+    padding: 18px 40px;
+    font-size: 11px;
+  }
+
   &:hover {
     color: $color-highlight;
     background-color: #fff;
